2008-04-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 tools/pqxx-fulltest:
  - Also look for compilers in /usr/local/bin
2008-04-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/util.hxx, src/binarystring.cxx, src/connection_base.cxx,
 src/cursor.cxx, src/pipeline.cxx, src/tablereader.cxx, src/util.cxx:
  - Fixed warnings in g++ 4.3
2008-04-17  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/unit/test_stateless_cursor.cxx:
  - Test most likely usage pattern: batched sequential retrieval
2008-04-16  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/Doxyfile.in:
  - Removed some unused options to improve Doxygen version compatibility
 src/robusttransaction.cxx:
  - Log failures while creating log table
2008-04-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cursor.hxx, src/cursor.cxx:
  - Removed fetch_current_row() (it was odd, and hard to guarantee)
 test/unit/test_sql_cursor.cxx:
  - Test cursor existence using FETCH, not MOVE (to make failure more likely)
  - On older backends, test for cursor existence differently
  - Re-create series table when opening new transaction
  - WITH HOLD cursors require backend 7.4 or better
2008-04-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 src/cursor.cxx:
  - Made init_empty_result() conditional on backend version
 test/test_helpers.hxx, test/unit/test_stateless_cursor.cxx,
 test/unit/test_sql_cursor.cxx:
  - Workaround for pre-8.0 backends, which lack generate_series()
 include/pqxx/transaction.hxx:
  - Cosmetic
2008-04-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/Doxyfile.in:
  - Upgraded from Doxygen 1.4.6 to 1.5.5.
2008-04-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/cachedresult.h, include/pqxx/cursor.h, src/oldcursor.cxx,
 test/src/cachedresult.cxx, test/test040.cxx, test/test041.cxx,
 test/test044.cxx, test/test047.cxx:
  - Deleted
  - Removed cachedresult and old Cursor classes
 include/Makefile.am, src/Makefile.am:
  - Retiring old *.h files and old cursor/cachedresult classes
 include/pqxx/cursor.hxx: