@@ -685,6 +685,7 @@ public:
 
   T *c_ptr() const throw () { return m_ptr; }
   T &operator*() const throw () { return *m_ptr; }
+  T &operator[](size_type i) const throw () { return m_ptr[i]; }
   T &operator[](difference_type i) const throw () { return m_ptr[i]; }
 
   scoped_array &operator=(T *t) throw ()
